# aki-xcat

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  TODO.md
fixtures/: bzip2text.txt.bz2  invalid_utf8.txt.bz2  invalid_utf8.txt.lz4  invalid_utf8.txt.xz  invalid_utf8.txt.zst  lz4text.txt.lz4  zstext.txt.zst
specs/: 0-.prompt.md  0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  parse.rs
src/util/: adapt_input.rs  file_type.rs  mod.rs
tests/: helper.rs  test.rs  test_e.rs  test_l.rs  test_s.rs
tests/common/: macros.rs
xtask/src/: aki-xcat-cmd.txt  cmd.txt  gen_src_cmd.rs
