[package]
name = "aki-xcat"
version = "0.1.11"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
concate files that are plain, gzip ... etc
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-xcat"

[lib]
name = "libaki_xcat"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-xcat"
path = "src/main.rs"

[features]
default = ["flate2"]
#default = ["libflate"]
#default = ["inflate"]

[dependencies]
#flate2 = { version = "=1.0", optional = true }
flate2 = { version = "1.0.7", features = ["rust_backend"], default-features = false, optional = true }
#flate2 = { version = "=1.0", features = ["zlib"], default-features = false, optional = true }
libflate = { version = "1.0", optional = true }
inflate = { version = "0.4.5", optional = true }

anyhow = "1.0"
flood-tide = { version="0.1", default-features=true, features=["stop_at_mm"] }
runnel = "0.2"

[dev-dependencies]

[build-dependencies]
rustc_version = "=0.2.3"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = []
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program is concate files.
"""
depends = "$auto"
assets = [
    ["target/release/aki-xcat", "usr/bin/", "755"],
]
