[package]
name = "aki-xcat"
version = "0.1.19"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
concatenate files that are plain, gzip, xz and zstd.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-xcat"

[lib]
name = "libaki_xcat"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-xcat"
path = "src/main.rs"

[features]
default = ["flate2", "xz2", "zstd", "lz4"]
#default = ["libflate"]
#default = ["inflate"]

[dependencies]
anyhow = "1.0"
flood-tide = { version="0.1", default-features=true, features=["stop_at_mm"] }
runnel = "0.3"

flate2 = { version = "=1.0.20", features = ["rust_backend"], default-features = false, optional = true }
libflate = { version = "1.0", optional = true }
inflate = { version = "0.4.5", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.6", optional = true }
lz4 = { version = "1.23", optional = true }

[dev-dependencies]

[build-dependencies]
rustc_version = "0.3"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = []
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
concatenate files that are plain, gzip, xz and zstd.
"""
depends = "$auto"
assets = [
    ["target/release/aki-xcat", "usr/bin/", "755"],
]
